--- a/projects/loja/src/app/side-menu/side-menu.component.scss
+++ b/projects/loja/src/app/side-menu/side-menu.component.scss
@@ -6,9 +6,16 @@
     left: 0;
     background-color: #ccc;
     overflow-x: hidden;
+    padding: 10px;
 
     &__title {
         font-weight: bold;
-        text-align: center;
+        margin: 0 0 20px 0;
+    }
+
+    .side-menu__nav {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
     }
 }
