Fix para testes unitarios; diagramacao da tela de login

--- a/projects/loja/src/app/side-menu/side-menu.component.html
+++ b/projects/loja/src/app/side-menu/side-menu.component.html
@@ -8,7 +8,9 @@
             <span routerLink="/products" routerLinkActive="active">Produtos</span>
         </li>
         <li>
-            <app-login-button></app-login-button>
+            <button class="login-button" (click)="openLoginModal()">
+                Entrar
+            </button>
         </li>
     </ul>
 </div>
