--- a/projects/loja/src/app/side-menu/side-menu.component.scss
+++ b/projects/loja/src/app/side-menu/side-menu.component.scss
@@ -18,4 +18,11 @@
         margin: 0;
         padding: 0;
     }
+
+    .login-button {
+        color: #fff;
+        background-color: #000;
+        margin-top: 20px;
+        padding: 5px 10px;
+    }
 }
