--- a/projects/loja/src/app/components/products/product-cart/product-cart.component.html
+++ b/projects/loja/src/app/components/products/product-cart/product-cart.component.html
@@ -1,32 +1,31 @@
-<div class="product-detail" *ngIf="product">
-    <div class="product-detail__content">
-        <div class='row'>
+<div class="product-cart">
+    <h1 class="product-cart__title">Carrinho</h1>
+    <div class="product-cart__content" *ngIf="products">
+        <div class='row' *ngFor="let product of products; index as i">
             <div class='column'>
-                <div class="product-detail__image">
-                    <span class="product-detail__image--text">Área para Imagem</span>
+                <div class="product-cart__image">
+                    <span class="product-cart__image--text">Área para Imagem</span>
                 </div>
             </div>
             <div class='column'>
                 <h2>{{ product.name }}</h2>
 
                 <p>Código {{ product.id }}</p>
-
-                <p>{{ product.description }}</p>
             </div>
             <div class="column">
-                <h3>Comprar por {{ product.price | currency:'BRL':true }}</h3>
                 <h4>Total: <span *ngIf="product.quantity">{{ product.price * product.quantity | currency:'BRL':true }}</span></h4>
-                <div class="product-detail__storage">
-                    <span>Em estoque: {{ product.quantity }}</span>
+                <div class="product-cart__storage">
+                    <span>Em estoque: {{ product.originalStorage }}</span>
                 </div>
 
                 <app-add-items [product]="product" (applyDiscount)='applyDiscount($event)'></app-add-items>
-
-                <div class="product-detail__discount">
-                    <div *ngIf="!showDiscount" class="product-detail__discount--without">
+            </div>
+            <div class="column">
+                <div class="product-cart__discount">
+                    <div *ngIf="!showDiscount" class="product-cart__discount--without">
                         <p>Aviso: Comprar abaixo de 10 itens não tem desconto</p>
                     </div>
-                    <div *ngIf="showDiscount" class="product-detail__discount--with">
+                    <div *ngIf="showDiscount" class="product-cart__discount--with">
                         <p>Seu desconto aparecerá no checkout</p>
                     </div>
                 </div>
