--- a/projects/loja/src/app/components/side-menu/side-menu.component.html
+++ b/projects/loja/src/app/components/side-menu/side-menu.component.html
@@ -11,6 +11,7 @@
         <ng-template #loggedInBlock>
             <li>
                 <span routerLink="/cart" routerLinkActive="active">Carrinho</span>
+                <span class="side-menu__nav--badge" *ngIf="totalItems > 0">{{totalItems}}</span>
             </li>
         </ng-template>
         <ng-template #notLoggedInBlock>
