--- a/projects/loja/src/app/components/side-menu/side-menu.component.scss
+++ b/projects/loja/src/app/components/side-menu/side-menu.component.scss
@@ -6,9 +6,38 @@
     left: 0;
     background-color: #ccc;
     overflow-x: hidden;
+    padding: 10px;
 
     &__title {
         font-weight: bold;
-        text-align: center;
+        margin: 0 0 20px 0;
+    }
+
+    .side-menu__nav {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+
+        &--badge {
+            background-color: #000;
+            color: #fff;
+            border-radius: 50%;
+            margin-left: 10px;
+            display: inline-block;
+            width: 25px;
+            text-align: center;
+        }
+    }
+
+    .login-button {
+        color: #fff;
+        background-color: #000;
+        margin-top: 20px;
+        padding: 5px 10px;
+    }
+
+    li {
+        padding: 10px 0;
+        cursor: pointer;
     }
 }
