--- a/projects/loja/src/app/components/products/product-list/product-list.component.html
+++ b/projects/loja/src/app/components/products/product-list/product-list.component.html
@@ -1,1 +1,4 @@
-<p>product-list works!</p>
+<div class="product-list">
+    <h1 class="product-list__title">Produtos</h1>
+    <app-product-card *ngFor="let product of products; index as i" [product]="product"></app-product-card>
+</div>
